--- a/src/styles/shelf.css
+++ b/src/styles/shelf.css
@@ -76,7 +76,7 @@
   }
   
   .icons {
-    margin-top: .5%;
+    margin-top: -.3%;
     padding: 0;
   }
   
@@ -172,7 +172,7 @@
   }
   
   .icons {
-    margin-top: -.4%;
+    margin-top: -1.2%;
     padding-left: 0;
   }
   
