--- a/src/styles/aboutme.css
+++ b/src/styles/aboutme.css
@@ -27,8 +27,9 @@
 }
 
 .notebook img{
-  width: 70%;
-  margin-left: 245%;
+  width: 15%;
+  margin-top: 5%;
+  margin-left: 1160px;
 }
 
 .headphones {
@@ -36,9 +37,9 @@
 }
 
 .headphones img{
-  width: 70%;
-  margin-top: 165%;
-  margin-left: 225%;
+  width: 80%;
+  margin-top: 140%;
+  margin-left: 320%;
 }
 
 .broken-sheet {
@@ -63,7 +64,7 @@
   font-size: 30px;
   text-align: justify;
   font-weight: 500;
-  text-shadow: 0 2px 2px black;
+  /* text-shadow: 0 1px 1px black; */
   width: 100%;
 }
 
