--- a/src/styles/home/images.css
+++ b/src/styles/home/images.css
@@ -5,7 +5,7 @@
 }
 
 .phone {
-  margin-left: 3%;
+  left: -3%;
 }
 
 .coffee img{
@@ -23,7 +23,7 @@
 .headphones img{
   width: 80%;
   margin-top: 190%;
-  margin-left: 10%;
+  margin-left: 340%;
 }
 
 
