--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -16,14 +16,13 @@
   height: 50%;
 }
 
-.section-about {
+/* .section-about {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .section-about img {
-  width: 80%;
   margin: 10px;
   border-radius: 2%;
   box-shadow:  0px 0px 5px 5px grey;
@@ -34,7 +33,6 @@
   font-size: 30px;
   text-align: justify;
   font-weight: 500;
-  width: 100%;
 }
 
 .section-about a {
@@ -51,63 +49,25 @@
 
 
 
-@media (max-width:360px){
+@media (max-width:375px){
   .about {
     margin-top: 11%;
   }
 
-  .section-about {
-    display: block;
-    text-align: center;
+  .section-about img {
+    position: absolute;
+    width: 80%;
+    margin-top: -180%;
   }
 
   .section-about p {
-    margin-left: 5%;
-    padding-right: 10%;
-    font-size: 20px;
-    font-weight: 500;
-    text-shadow: 0 1px 1px black;
-    width: 100%;
-  }
-
-  .broken-sheet {
-    height: 5%;
-    margin-top: -12.5%;
-    z-index: -1;
-  }
-}
-
-
-
-/*? .....................................................................................
-/* ? -------------------------- CEL MEDIUM -------------------------------------------------
-/* ?.......................................................................................*/
-
-
-
-@media only screen and (min-width: 361px) and (max-width: 375px) {
-  .about {
-    margin-top: 11%;
-  }
-
-  .section-about {
     display: block;
-    text-align: center;
-  }
-
-  .section-about p {
-    margin-left: 5%;
-    padding-right: 10%;
-    font-size: 20px;
-    font-weight: 500;
-    text-shadow: 0 1px 1px black;
-    width: 100%;
-  }
-
-  .broken-sheet {
-    height: 5%;
-    margin-top: -12.5%;
-    z-index: -1;
+    margin-top: 100%;
+    margin-left: 15%;
+    padding-right: 5%;
+    font-size: 18px;
+    font-weight: 400;
+    text-shadow: 0px 0px 2px black;
   }
 }
 
@@ -123,24 +83,20 @@
     margin-top: 11%;
   }
 
-  .section-about {
-    display: block;
-    text-align: center;
+  .section-about img {
+    position: absolute;
+    width: 80%;
+    margin-top: -160%;
   }
 
   .section-about p {
-    margin-left: 5%;
-    padding-right: 10%;
-    font-size: 20px;
-    font-weight: 500;
-    text-shadow: 0 1px 1px black;
-    width: 100%;
-  }
-
-  .broken-sheet {
-    height: 5%;
-    margin-top: -12.5%;
-    z-index: -1;
+    display: block;
+    margin-top: 90%;
+    margin-left: 15%;
+    padding-right: 5%;
+    font-size: 18px;
+    font-weight: 400;
+    text-shadow: 0px 0px 2px black;
   }
 }
 
