--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -57,7 +57,7 @@
   .section-about img {
     position: absolute;
     width: 80%;
-    margin-top: -180%;
+    margin-top: -165%;
   }
 
   .section-about p {
@@ -78,7 +78,7 @@
 
 
 
-@media only screen and (min-width: 376px) and (max-width: 444px) {
+@media only screen and (min-width: 376px) and (max-width: 390px) {
   .about {
     margin-top: 11%;
   }
@@ -91,7 +91,29 @@
 
   .section-about p {
     display: block;
-    margin-top: 95%;
+    margin-top: 100%;
+    margin-left: 15%;
+    padding-right: 5%;
+    font-size: 18px;
+    font-weight: 400;
+    text-shadow: 0px 0px 2px black;
+  }
+}
+
+@media only screen and (min-width: 391px) and (max-width: 414px) {
+  .about {
+    margin-top: 11%;
+  }
+
+  .section-about img {
+    position: absolute;
+    width: 80%;
+    margin-top: -135%;
+  }
+
+  .section-about p {
+    display: block;
+    margin-top: 100%;
     margin-left: 15%;
     padding-right: 5%;
     font-size: 18px;
