--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -1,7 +1,7 @@
 .about {
   background: white;
   width: 80%;
-  background-image: url('https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_container.jpg');
+  background-image: url("https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_container.jpg");
   height: 80%;
   margin-top: 20%;
   margin: 0 auto;
@@ -11,7 +11,7 @@
 }
 
 .broken-sheet {
-  background-image: url('https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_endContent.png');
+  background-image: url("https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_endContent.png");
   width: 100%;
   height: 50%;
 }
@@ -25,7 +25,7 @@
 .section-about img {
   margin: 10px;
   border-radius: 2%;
-  box-shadow:  0px 0px 5px 5px grey;
+  box-shadow: 0px 0px 5px 5px grey;
 }
 
 .section-about p {
@@ -39,17 +39,11 @@
   text-decoration: none;
 }
 
-
-
-
 /*? ....................................................................................
 /* ? -----------------------CEL SMALL -----------------------------------------------------
 /*? ......................................................................................*/
 
-
-
-
-@media (max-width:375px){
+@media (max-width: 375px) {
   .about {
     margin-top: 11%;
   }
@@ -71,12 +65,9 @@
   }
 }
 
-
 /* ? ......................................................................
 /*? ---------------------------- CEL HIGH ---------------------------------
 /*? .......................................................................*/
-
-
 
 @media (min-width: 376px) and (max-width: 390px) {
   .about {
@@ -121,5 +112,3 @@
     text-shadow: 0px 0px 2px black;
   }
 }
-
-
