--- a/src/styles/home/shelf.css
+++ b/src/styles/home/shelf.css
@@ -1,16 +1,16 @@
 @keyframes float {
-	0% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-		transform: translatey(0px);
-	}
-	50% {
-		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
-		transform: translatey(-20px);
-	}
-	100% {
-		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-		transform: translatey(0px);
-	}
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-20px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
 }
 
 .container-shelf {
@@ -44,7 +44,7 @@
   justify-content: center;
   width: 50px;
   border-radius: 50%;
-	animation: float 6s ease-in-out infinite;
+  animation: float 6s ease-in-out infinite;
 }
 
 .shadows {
@@ -66,24 +66,21 @@
 
 .icons img:hover {
   cursor: pointer;
-  margin-top: -25%;
+  margin-top: -20%;
+  width: 60px;
 }
 
 .copyright {
   margin-top: 13%;
-  color:darkgrey;
+  color: darkgrey;
   font-weight: 600;
 }
-
-
 
 /*? ....................................................................................
 /* ? -----------------------CEL SMALL -----------------------------------------------------
 /*? ......................................................................................*/
 
-
-
-@media (max-width:360px) {
+@media (max-width: 360px) {
   .container-shelf {
     text-align: center;
   }
@@ -92,47 +89,44 @@
     width: 100%;
     margin-top: 5.6%;
   }
-  
+
   .icons {
-    margin-top: -.3%;
+    margin-top: -0.3%;
     padding: 0;
   }
-  
+
   .icons li {
     margin: 10px;
   }
-  
+
   .icons img {
     width: 40px;
   }
-  
+
   .shadows {
     margin-top: -39px;
     padding-left: 0;
   }
-  
+
   .shadows li {
     margin: 10px;
   }
-  
+
   .shadows img {
     width: 40px;
   }
-  
+
   .copyright {
     margin-top: 10%;
     padding: 1rem;
   }
 }
 
-
 /*? .....................................................................................
 /* ? -------------------------- CEL MEDIUM -------------------------------------------------
 /* ?.......................................................................................*/
 
-
-
-@media (min-width: 361px) and (max-width: 375px){
+@media (min-width: 361px) and (max-width: 375px) {
   .container-shelf {
     text-align: center;
   }
@@ -140,47 +134,44 @@
   .shelf img {
     width: 100%;
   }
-  
+
   .icons {
     margin-top: 1.3%;
     padding-left: 0;
   }
-  
+
   .icons li {
     margin: 10px;
   }
-  
+
   .icons img {
     width: 40px;
   }
-  
+
   .shadows {
     margin-top: -40px;
     padding-left: 0;
   }
-  
+
   .shadows li {
     margin: 10px;
   }
-  
+
   .shadows img {
     width: 40px;
   }
-  
+
   .copyright {
     margin-top: 10%;
     padding: 1rem;
   }
 }
 
-
 /* ? ......................................................................
 /*? ---------------------------- CEL HIGH ---------------------------------
 /*? .......................................................................*/
 
-
-
-@media (min-width: 376px) and (max-width: 414px){
+@media (min-width: 376px) and (max-width: 414px) {
   .container-shelf {
     text-align: center;
   }
@@ -189,33 +180,33 @@
     width: 100%;
     margin-top: 5.4%;
   }
-  
+
   .icons {
     margin-top: -1.4%;
     padding-left: 0;
   }
-  
+
   .icons li {
     margin: 10px;
   }
-  
+
   .icons img {
     width: 50px;
   }
-  
+
   .shadows {
     margin-top: -9%;
     padding-left: 0;
   }
-  
+
   .shadows li {
     margin: 10px;
   }
-  
+
   .shadows img {
     width: 50px;
   }
-  
+
   .copyright {
     margin-top: 10%;
     padding: 1rem;
