--- a/src/styles/home/images.css
+++ b/src/styles/home/images.css
@@ -1,20 +1,16 @@
 .phone,
 .coffee,
 .headphones,
-.notebook,
-.broken-sheet,
-.shelf,
-.shadow-icon1,
-.shadow-icon2,
-.shadow-icon3,
-.shadow-icon4 {
+.notebook {
   position: absolute;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
 .phone {
   left: -3%;
+}
+
+.video {
+  z-index: 999999;
 }
 
 .coffee img {
@@ -35,41 +31,11 @@
   margin-left: 340%;
 }
 
-/*? ....................................................................................
-/* ? -----------------------CEL SMALL -----------------------------------------------------
-/*? ......................................................................................*/
-
-@media (max-width: 360px) {
+@media (max-width: 768px) {
   .phone img,
   .coffee img,
   .notebook img,
   .headphones img {
-    display: none;
-  }
-}
-
-/*? .....................................................................................
-/* ? -------------------------- CEL MEDIUM -------------------------------------------------
-/* ?.......................................................................................*/
-
-@media only screen and (min-width: 361px) and (max-width: 375px) {
-  .phone,
-  .coffee,
-  .notebook,
-  .headphones {
-    display: none;
-  }
-}
-
-/* ? ......................................................................
-/*? ---------------------------- CEL HIGH ---------------------------------
-/*? .......................................................................*/
-
-@media only screen and (min-width: 376px) and (max-width: 414px) {
-  .phone,
-  .coffee,
-  .notebook,
-  .headphones {
     display: none;
   }
 }
