--- a/src/styles/home/shelf.css
+++ b/src/styles/home/shelf.css
@@ -15,6 +15,7 @@
 
 .container-shelf {
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -23,191 +24,111 @@
 }
 
 .container-shadows {
-  position: relative;
-  margin-top: 4%;
+  display: flex;
+  position: absolute;
+  margin-top: -6.5%;
+  z-index: 9;
+}
+
+.container-shadows img {
+  margin-left: 2rem;
+  width: 70px;
+  height: 15px;
 }
 
 .icons {
   display: flex;
-  margin-top: 14%;
-  justify-content: center;
-}
-
-.icons li {
-  display: inline;
-  margin: 30px;
+  margin-top: -12%;
+  position: absolute;
 }
 
 .icons img {
-  align-items: center;
-  justify-content: center;
-  width: 50px;
+  margin-left: 2rem;
+  width: 70px;
   border-radius: 50%;
   animation: float 6s ease-in-out infinite;
 }
 
-.shadows {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin-top: -12%;
-  list-style: none;
-  z-index: 1;
-}
-
-.shadows li {
-  margin: 30px;
-}
-
-.shadows img {
-  width: 50px;
-}
-
 .icons img:hover {
   cursor: pointer;
-  margin-top: -20%;
-  width: 60px;
+  width: 80px;
 }
 
 .copyright {
-  margin-top: 13%;
+  display: flex;
+  position: absolute;
+  margin-top: 5rem;
   color: darkgrey;
   font-weight: 600;
+  font-size: 20px;
+  z-index: 9;
 }
 
-/*? ....................................................................................
-/* ? -----------------------CEL SMALL -----------------------------------------------------
-/*? ......................................................................................*/
-
-@media (max-width: 360px) {
+@media only screen and (max-width: 768px) {
   .container-shelf {
-    text-align: center;
+    margin-top: 10%;
   }
 
   .shelf img {
     width: 100%;
-    margin-top: 5.6%;
+  }
+
+  .container-shadows {
+    margin-top: -22%;
+  }
+
+  .container-shadows img {
+    margin-left: 2rem;
+    width: 70px;
+    height: 10px;
   }
 
   .icons {
-    margin-top: -0.3%;
-    padding: 0;
-  }
-
-  .icons li {
-    margin: 10px;
+    margin-top: -39%;
   }
 
   .icons img {
-    width: 40px;
-  }
-
-  .shadows {
-    margin-top: -39px;
-    padding-left: 0;
-  }
-
-  .shadows li {
-    margin: 10px;
-  }
-
-  .shadows img {
-    width: 40px;
+    margin-left: 2rem;
+    width: 70px;
   }
 
   .copyright {
-    margin-top: 10%;
-    padding: 1rem;
+    margin-top: 10rem;
+    font-size: 24px;
   }
 }
 
-/*? .....................................................................................
-/* ? -------------------------- CEL MEDIUM -------------------------------------------------
-/* ?.......................................................................................*/
-
-@media (min-width: 361px) and (max-width: 375px) {
-  .container-shelf {
-    text-align: center;
-  }
-
-  .shelf img {
-    width: 100%;
-  }
-
-  .icons {
-    margin-top: 1.3%;
-    padding-left: 0;
-  }
-
-  .icons li {
-    margin: 10px;
-  }
-
-  .icons img {
-    width: 40px;
-  }
-
-  .shadows {
-    margin-top: -40px;
-    padding-left: 0;
-  }
-
-  .shadows li {
-    margin: 10px;
-  }
-
-  .shadows img {
-    width: 40px;
-  }
-
-  .copyright {
-    margin-top: 10%;
-    padding: 1rem;
-  }
-}
-
-/* ? ......................................................................
-/*? ---------------------------- CEL HIGH ---------------------------------
-/*? .......................................................................*/
-
-@media (min-width: 376px) and (max-width: 414px) {
-  .container-shelf {
-    text-align: center;
-  }
-
-  .shelf img {
-    width: 100%;
-    margin-top: 5.4%;
-  }
-
-  .icons {
-    margin-top: -1.4%;
-    padding-left: 0;
-  }
-
-  .icons li {
-    margin: 10px;
-  }
-
-  .icons img {
+@media only screen and (max-width: 425px) {
+  .container-shadows img {
+    margin-left: 1rem;
     width: 50px;
   }
 
-  .shadows {
-    margin-top: -9%;
-    padding-left: 0;
-  }
-
-  .shadows li {
-    margin: 10px;
-  }
-
-  .shadows img {
+  .icons img {
+    margin-left: 1rem;
     width: 50px;
   }
 
   .copyright {
-    margin-top: 10%;
+    text-align: center;
     padding: 1rem;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .container-shelf {
+    margin-top: 5rem;
+  }
+  .container-shadows img {
+    width: 40px;
+  }
+
+  .icons img {
+    width: 40px;
+  }
+
+  .copyright {
+    font-size: 16px;
   }
 }
