--- a/src/styles/javascriptCss/javascript.css
+++ b/src/styles/javascriptCss/javascript.css
@@ -15,6 +15,11 @@
   width: 100%;
 }
 
+.react-player {
+  display: flex;
+  position: relative;
+}
+
 .carousel-control-prev,
 .carousel-control-next {
   background: goldenrod;
