--- a/src/styles/home/menu.css
+++ b/src/styles/home/menu.css
@@ -116,34 +116,19 @@
   width: 30px;
   height: 30px;
 }
-/* 
-.sub-menu div:hover,
-.Link:hover {
-  color: black;
-  text-shadow: 1px 1px 3px;
-  text-decoration-line: underline;
-} */
 
-@media (max-width: 360px) {
-  .head p {
-    position: relative;
-    margin-top: 15%;
-    font-size: 1.75rem;
-    margin-top: 20%;
+@media only screen and (max-width: 768px) {
+  .phrase {
+    margin-top: -2rem;
+    text-align: center;
+    font-size: 1rem;
+    padding: 2%;
+    margin-bottom: 1rem;
   }
-
   .photo {
     width: 15%;
     position: absolute;
     margin-top: -12%;
-    z-index: -1;
-  }
-
-  .phrase {
-    margin-top: -7%;
-    text-align: center;
-    font-size: 1rem;
-    padding: 2%;
   }
 
   .sub-menu {
@@ -151,7 +136,10 @@
     display: block;
     width: 80.2%;
     margin-left: 10%;
-    margin-top: 10.5%;
+    margin-top: 0.5%;
+  }
+  .sub-menu ul {
+    margin-top: -0.25rem;
   }
   .sub-menu li {
     font-size: 1.25rem;
@@ -179,133 +167,7 @@
     display: block;
     border-radius: 4px;
     left: -150%;
-    z-index: 2;
-  }
-  .open {
-    transition: 0.5s;
-    left: -1px;
-  }
-}
-
-@media only screen and (min-width: 361px) and (max-width: 375px) {
-  .head p {
-    position: relative;
-    margin-top: 15%;
-    font-size: 1.75rem;
-    margin-top: 20%;
-  }
-
-  .photo {
-    width: 15%;
-    position: absolute;
-    margin-top: -12%;
-    z-index: -1;
-  }
-
-  .phrase {
-    margin-top: -7%;
-    text-align: center;
-    font-size: 1rem;
-    padding: 2%;
-  }
-
-  .sub-menu {
-    position: absolute;
-    display: block;
-    width: 80.2%;
-    margin-left: 10%;
-    margin-top: 10.5%;
-  }
-  .sub-menu li {
-    font-size: 1.25rem;
-    display: block;
-    padding: 0;
-    margin-top: -7px;
-    text-align: center;
-  }
-  .menu-img {
-    border-radius: 10%;
-  }
-
-  .menu-img img {
-    visibility: visible;
-    justify-content: center;
-    margin-top: -65%;
-    padding-bottom: 30px;
-    background: #d07b31;
-    border-radius: 10%;
-  }
-
-  .button-menu {
-    margin: -1px;
-    padding-bottom: 10px;
-    display: block;
-    border-radius: 4px;
-    left: -150%;
-    z-index: 2;
-  }
-  .open {
-    transition: 0.5s;
-    left: -1px;
-  }
-}
-
-@media only screen and (min-width: 376px) and (max-width: 414px) {
-  .head p {
-    position: relative;
-    margin-top: 15%;
-    font-size: 1.75rem;
-    margin-top: 20%;
-  }
-
-  .photo {
-    width: 15%;
-    position: absolute;
-    margin-top: -12%;
-    z-index: -1;
-  }
-
-  .phrase {
-    margin-top: -7%;
-    text-align: center;
-    font-size: 1rem;
-    padding: 2%;
-  }
-
-  .sub-menu {
-    position: absolute;
-    display: block;
-    width: 80.2%;
-    margin-left: 10%;
-    margin-top: 10.5%;
-  }
-  .sub-menu li {
-    font-size: 1.25rem;
-    display: block;
-    padding: 0;
-    margin-top: -7px;
-    text-align: center;
-  }
-  .menu-img {
-    border-radius: 10%;
-  }
-
-  .menu-img img {
-    visibility: visible;
-    justify-content: center;
-    margin-top: -65%;
-    padding-bottom: 30px;
-    background: #d07b31;
-    border-radius: 10%;
-  }
-
-  .button-menu {
-    margin: -1px;
-    padding-bottom: 10px;
-    display: block;
-    border-radius: 4px;
-    left: -150%;
-    z-index: 2;
+    z-index: 3;
   }
   .open {
     transition: 0.5s;
