--- a/src/styles/home/menu.css
+++ b/src/styles/home/menu.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
 .head {
   display: flex;
@@ -8,7 +8,7 @@
 }
 
 .head p {
-  font-size: 4rem;
+  font-size: 100px;
   color: wheat;
   font-weight: 600;
 }
@@ -23,7 +23,7 @@
   justify-content: center;
   font-size: 1.75rem;
   color: whitesmoke;
-  font-family: "Courgette", cursive;
+  font-family: 'Courgette', cursive;
   text-align: center;
 }
 
@@ -96,7 +96,7 @@
 }
 
 .button-menu::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
@@ -118,6 +118,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .head p {
+    font-size: 60px;
+  }
+
   .phrase {
     margin-top: -2rem;
     text-align: center;
@@ -136,10 +140,10 @@
     display: block;
     width: 80.2%;
     margin-left: 10%;
-    margin-top: 0.5%;
+    margin-top: 4%;
   }
   .sub-menu ul {
-    margin-top: -0.25rem;
+    margin-top: 0.5%;
   }
   .sub-menu li {
     font-size: 1.25rem;
@@ -172,5 +176,35 @@
   .open {
     transition: 0.5s;
     left: -1px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .head p {
+    font-size: 40px;
+  }
+
+  .sub-menu {
+    margin-top: 7.8%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .head p {
+    font-size: 30px;
+  }
+
+  .phrase {
+    margin-top: 0;
+  }
+
+  .sub-menu {
+    margin-top: 8.8%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .sub-menu {
+    margin-top: 10.5%;
   }
 }
