--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -1,7 +1,7 @@
 .about {
   background: white;
   width: 80%;
-  background-image: url("https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_container.jpg");
+  background-image: url('https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_container.jpg');
   margin: 0 auto;
   position: relative;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);
@@ -9,7 +9,7 @@
 }
 
 .broken-sheet {
-  background-image: url("https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_endContent.png");
+  background-image: url('https://demo.gridgum.com/free-templates/blogger/wp-content/themes/Blogger/images/bg_endContent.png');
   position: absolute;
   background-repeat: no-repeat;
   background-size: contain;
@@ -43,6 +43,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .principal {
+    margin-top: 50px;
+  }
+
   .section-about img {
     width: 210px;
   }
