--- a/src/styles/home/menu.css
+++ b/src/styles/home/menu.css
@@ -30,7 +30,6 @@
 .sub-menu {
   display: flex;
   justify-content: center;
-  margin-top: 6%;
 }
 
 .menu-img {
@@ -140,16 +139,15 @@
     display: block;
     width: 80.2%;
     margin-left: 10%;
-    margin-top: 3.5%;
+    margin-top: 3.8%;
   }
   .sub-menu ul {
-    margin-top: 2.8%;
+    margin-top: 1%;
   }
   .sub-menu li {
     font-size: 1.25rem;
     display: block;
     padding: 0;
-    margin-top: -7px;
     text-align: center;
   }
   .menu-img {
@@ -159,7 +157,7 @@
   .menu-img img {
     visibility: visible;
     justify-content: center;
-    margin-top: -65%;
+    margin-top: -60%;
     padding-bottom: 30px;
     background: #d07b31;
     border-radius: 10%;
@@ -184,12 +182,12 @@
     font-size: 40px;
   }
 
-  .sub-menu {
-    margin-top: 5.5%;
-  }
+  /* .sub-menu {
+    margin-top: 4%;
+  } */
 
   .sub-menu ul {
-    margin-top: 6%;
+    margin-top: 5%;
   }
 }
 
@@ -207,7 +205,7 @@
   }
 
   .sub-menu ul {
-    margin-top: 7%;
+    margin-top: 4%;
   }
 }
 
@@ -217,6 +215,6 @@
   }
 
   .sub-menu ul {
-    margin-top: 7.4%;
+    margin-top: 3%;
   }
 }
