--- a/src/styles/home/menu.css
+++ b/src/styles/home/menu.css
@@ -2,13 +2,11 @@
 
 .head {
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: 2rem;
+  justify-content: center;
 }
 
 .head p {
-  font-size: 100px;
+  font-size: 60px;
   color: wheat;
   font-weight: 600;
 }
@@ -19,12 +17,11 @@
 
 .phrase {
   display: flex;
-  align-items: center;
   justify-content: center;
-  font-size: 1.75rem;
+  font-size: 22px;
   color: whitesmoke;
   font-family: 'Courgette', cursive;
-  text-align: center;
+  margin-bottom: 2%;
 }
 
 .sub-menu {
@@ -36,6 +33,7 @@
   position: absolute;
   visibility: hidden;
   display: flex;
+  z-index: 1;
 }
 
 .Link {
@@ -45,30 +43,37 @@
 
 .button-menu:nth-child(1n) {
   background: #cc5560;
+  z-index: 5;
 }
 
 .button-menu:nth-child(2n) {
   background: #b1bd2a;
+  z-index: 5;
 }
 
 .button-menu:nth-child(3n) {
   background: #d07b31;
+  z-index: 5;
 }
 
 .button-menu:nth-child(4n) {
   background: #84aaa3;
+  z-index: 5;
 }
 
 .button-menu:nth-child(5n) {
   background: #7579c4;
+  z-index: 5;
 }
 
 .button-menu:nth-child(6n) {
   background: #75c481;
+  z-index: 5;
 }
 
 .button-menu:nth-child(7n) {
   background: #ad75c4;
+  z-index: 5;
 }
 
 .sub-menu ul {
@@ -112,8 +117,8 @@
 }
 
 .button-menu:hover::before {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 
 @media only screen and (max-width: 768px) {
