--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -31,6 +31,8 @@
   border-radius: 2%;
   box-shadow: 0px 0px 5px 5px grey;
   width: 40%;
+  background-image: url("../../assets/circuito.gif");
+  padding: 0;
 }
 
 .section-about p {
