--- a/src/styles/home/aboutme.css
+++ b/src/styles/home/aboutme.css
@@ -65,3 +65,11 @@
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 426px) {
+  .broken-sheet {
+    width: 100%;
+    height: 40%;
+   
+  }
+}
