--- a/src/styles/home/home.css
+++ b/src/styles/home/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../assets/img/madera2.jpg");
+  background-image: url("../../assets/img/madera2.webp");
   /* font-family: 'Courgette', cursive; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
